; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_infcmd.c_unset_environment_command.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_infcmd.c_unset_environment_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"Delete all environment variables? \00", align 1
@inferior_environ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @unset_environment_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unset_environment_command(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = call i64 @query(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %10, %7
  %14 = load i32, i32* @inferior_environ, align 4
  %15 = call i32 @free_environ(i32 %14)
  %16 = call i32 (...) @make_environ()
  store i32 %16, i32* @inferior_environ, align 4
  br label %17

17:                                               ; preds = %13, %10
  br label %22

18:                                               ; preds = %2
  %19 = load i32, i32* @inferior_environ, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @unset_in_environ(i32 %19, i8* %20)
  br label %22

22:                                               ; preds = %18, %17
  ret void
}

declare dso_local i64 @query(i8*) #1

declare dso_local i32 @free_environ(i32) #1

declare dso_local i32 @make_environ(...) #1

declare dso_local i32 @unset_in_environ(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
